Code to let used set parameters for jvmOptions directly